[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BicycleDetection"
version = "0.0.1"
authors = []
description = ""
readme = "README.md"
keywords = ["vision"]
license = {file = "LICENSE"}
classifiers = [
	    "Programming Language :: Python :: 3",
	    ]
dependencies = [
	     "schedule",
	     "requests"
]

[project.urls]
homepage = "https://github.com/mishari/BicycleDetection/"

[tool.pylsp-mypy]
enabled = false
live_mode = false
strict = false

#[tool.pytest.ini_options]
#testpaths = ["tests"]
